--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,25 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["pytest", "pytest-mock", "black", "ruff"]
+dev = [
+    "pytest",
+    "pytest-mock",
+    "black",
+    "ruff"
+]
+
+[tool.black]
+line-length = 88
+target-version = ["py39"]
+skip-string-normalization = true
+include = '\.py$'
+
+[tool.ruff]
+line-length = 88
+select = ["E", "F", "B", "W"]
+ignore = ["E501"]  # Line too long, handled by black
+src = ["src", "tests"]
+fixable = ["ALL"]
+
+[tool.ruff.per-file-ignores]
+"tests/*" = ["S101"]  # Ignore assert warnings in tests
